# HelloCppCMakeLists

./: CMake.bat  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists - Kopie.txt  CMakeLists.txt
src/qtest/: CMakeLists.txt  foo.cpp
src/src/: CMakeLists.txt  formula.cpp  main.cpp
src/tst/: CMakeLists.txt  main.cpp  testwindow.cpp  testwindow.h
src/window/: CMakeLists.txt  main.cpp
